# pandora

./: .gitignore  CLAUDE.md  README.md  SPECS.md  package.json  turbo.json
apps/daemon/: package.json  tsconfig.json
apps/daemon/src/: daemon.ts  db.ts  index.ts  logger.ts  port-manager.ts  port-scanner.ts  process-manager.ts  protocol.ts  pty-worker.ts  smoke-pty.ts  types.ts
apps/desktop/: .gitignore  AGENTS.md  components.json  index.html  oxlint.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/docs/: effect-architecture.md  new-arch.md
apps/desktop/scripts/: bundle-daemon.ts  clear-pandora-home.ts  generate-theme-root-css.ts
apps/desktop/src/: App.tsx  index.css  main.tsx  theme-root.generated.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: agent_cli.rs  commands.rs  daemon_bridge.rs  database.rs  ghostty_app.rs  ghostty_ffi.rs  git.rs  main.rs  models.rs  native_shortcuts.rs  native_terminal_view.m  pandora_clipboard.m  surface_registry.rs  terminal_commands.rs  terminal_log.rs
apps/desktop/src-tauri/src/agent_cli/: bridge.rs  claude.rs  codex.rs  constants.rs  cursor.rs  gemini.rs  hooks.rs  integration.rs  mod.rs  paths.rs  scripts.rs  tests.rs  types.rs
apps/desktop/src-tauri/src/runtime/: agent_signal.rs  mod.rs  port_manager.rs  process_manager.rs  pty.rs  registry.rs  seed.rs  types.rs
apps/desktop/src-tauri/src/surface_registry/: macos.rs  mod.rs  stub.rs
apps/desktop/src-tauri/src/terminal_commands/: macos.rs  mod.rs  stub.rs
apps/desktop/vite/: monaco-editor-plugin.ts
daemon/: package.json
daemon/src/: daemon.ts  db.ts  index.ts  process-manager.ts
daemon/src/__tests__/: bun-terminal-smoke.test.ts  protocol.test.ts
pandora.xcodeproj/: project.pbxproj
pandora/App/: AppDelegate.swift  ProjectWindow.swift  main.swift
pandora/Bonsplit/Public/: BonsplitController.swift
pandora/Core/Daemon/: ConnectionState.swift  DaemonClient.swift  DebugLogStore.swift
pandora/Core/Git/: GitRepositoryResolver.swift  GitWorktreeService.swift
pandora/Core/Models/: ActionCapabilities.swift  AggregateStatus.swift  ClientMessage.swift  DaemonMessage.swift  PresentationMode.swift  RestartPolicy.swift  SessionDefinition.swift  SessionKind.swift  SessionState.swift  SessionStatus.swift  SlotDefinition.swift  SlotKind.swift  SlotPresentationMode.swift  SlotSection.swift  SlotState+Sorting.swift  SlotState.swift
pandora/Core/Persistence/: AppDatabase.swift  AppStateCache.swift
pandora/Core/Runtime/: PandoraDaemonLauncher.swift  WorkspaceRuntimeRegistry.swift
pandora/Core/SplitPane/: CLAUDE.md  SplitPaneController.swift
pandora/Features/Controls/: BottomActionBarView.swift
pandora/Features/Projects/: ProjectModels.swift  ProjectRowView.swift  ProjectsSidebarView.swift  ProjectsStore.swift  WorkspaceRowView.swift
pandora/Features/Sidebar/: AddTerminalSheet.swift  (+4 more)
pandora/SplitPane/: CLAUDE.md  SplitPaneConfig.swift  SplitPaneDelegate.swift  SplitPaneView.swift
tauri/: package.json
tauri/src/: App.tsx  index.css
tauri/src-tauri/: Cargo.toml
(+333 files in other folders)
