[package]
name = "pandora-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSString", "NSData", "NSThread"] }
objc2-app-kit = { version = "0.3", features = ["NSView", "NSWindow", "NSPasteboard", "NSResponder", "NSRunningApplication", "NSApplication"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer", "CAMetalLayer"] }
dispatch2 = "0.2"
